# infinite-infinite-craft

./: .gitignore  Cargo.toml  elements.json  infinite-craft.db  nodes.json  pairs.json  serialized_for_page.json
migrations/: 2024-02-25-10-37-initial-creation.sql
src/: main.rs
