[package]
name = "infinite-craft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
log = "0.4.20"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["json", "rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simple_logger = "4.3.3"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite" ] }